# esdm-netcdf-4.6.2-old

./: .gitignore  Makefile.am  README.md  configure.ac  libnetcdf.settings.in  netCDFConfig.cmake.in  test_prog.c
libsrcesdm/: Makefile.am  esdm_dispatch.c
libsrcesdm_test/: HELP_JULIAN.txt  Makefile.am  TST_JULIAN.txt  example.sh  test_szip.c  tst_attr.c  tst_attr_global.c  tst_attr_local_string.c  tst_atts.c  tst_atts1.c  tst_atts2.c  tst_atts3.c  tst_atts_bug.c  tst_atts_mod.c  tst_atts_string_rewrite.c  tst_attsperf.c  tst_bug1.c  tst_bug10.c  tst_bug11.c  tst_bug12.c  tst_bug13.c  tst_bug14.c  tst_bug15.c  tst_bug16.c  tst_bug17.c  tst_bug2.c  tst_bug25.c  tst_bug26.c  tst_bug29.c  tst_bug3.c  tst_bug30.c  tst_bug32.c  tst_bug324.c  tst_bug33.c  tst_bug37.c  tst_bug39.c  tst_bug4.c  tst_bug40.c  tst_bug45.c  tst_bug46.c  (+64 more)
libsrcesdm_test/Back-up/: Makefile.am  test_szip.c  tst_attr.c  tst_attr_global.c  tst_atts3.c  tst_chunks.c  tst_dim0_ME_1.c  tst_elatefill.c  tst_fillbug.c  tst_grps.c  tst_mode.c  tst_var.c  tst_vars.c  tst_vars4.c
libsrcesdm_test/Bugs/: README  tst_bug10.c  tst_bug15.c  tst_bug16.c  tst_bug17.c  tst_bug18.c  tst_bug19.c  tst_bug31.c  tst_bug324.c  tst_bug35.c  tst_bug4.c  tst_bug41.c  tst_fills_bug.c  tst_simplerw_coll_r_bug.c  tst_vars_bug.c
libsrcesdm_test/Jenkins/: README  tst_atts.c  tst_atts1.c  tst_atts2.c  tst_attsperf.c  tst_bug324.c  tst_bug48.c  tst_coords.c  tst_coords2.c  tst_coords3.c  tst_files.c  tst_fillbug.c  tst_fills.c  tst_parallel3.c  tst_rename.c  tst_vars.c  tst_vars2.c  tst_vars3.c  tst_vars4.c
libsrcesdm_test/NC_FAILURE/: cdm_sea_soundings.c  tst_chunks.c  tst_chunks2.c  tst_chunks3.c  (+14 more)
(+698 files in other folders)
